force-app/main/default/objects/Cost_Order_Detail__c/Cost_Order_Detail__c.object-meta.xml
<CustomObject>
    <label>Cost Order Detail</label>
    <nameField>
        <displayFormat>COD-{000000}</displayFormat>
        <label>Cost Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>