force-app/main/default/objects/Cost_Order_Detail__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <formula>TEXT(Related_Cost__r.Cost_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Type</label>
    <type>Text</type>
</CustomField>