force-app/main/default/objects/Cost_Order_Detail__c/fields/Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Cost_Value__c</fullName>
    <formula>Related_Cost__r.Cost_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>