force-app/main/default/objects/Cost_Order_Detail__c/fields/Related_Cost__c.field-meta.xml
<CustomField>
    <fullName>Related_Cost__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Cost</label>
    <referenceTo>Cost__c</referenceTo>
    <relationshipLabel>Cost Order Details</relationshipLabel>
    <relationshipName>Cost_Order_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>